k8s/deployment.dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landingpage
  namespace: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: landingpage
  template:
    metadata:
      labels:
        app: landingpage
    spec:
      containers:
        - name: landingpage
          image: crimsy/landingpage:development
          imagePullPolicy: Always
      imagePullSecrets:
        - name: docker-hub-crimsy
---
apiVersion: v1
kind: Service
metadata:
  name: landingpage
  namespace: development
  labels:
    app: landingpage
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: landingpage
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: landingpage
  namespace: development
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  labels:
    app: landingpage

spec:
  tls:
    - hosts:
        - crimsy.tech
        - dev.crimsy.tech
      secretName: crimsy-tech-tls-root
  rules:
    - host: crimsy.tech
      http:
        paths:
          - path: /
            backend:
              serviceName: landingpage
              servicePort: 80
    - host: dev.crimsy.tech
      http:
        paths:
          - path: /
            backend:
              serviceName: landingpage
              servicePort: 80
